attempts to fix homepage background on mobile

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -13,7 +13,6 @@ body {
   background: $bg-clr;
   background-attachment: fixed;
   background-image: url('/blue-paper-bg-vert.jpg');
-  background-size: contain;
   font-family: $font-med;
   height: var(--app-height);
   width: 100%;
